<resources>
    <string name="app_name">pMultimedia</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Leandro Paredes</string>
    <string name="nav_header_subtitle">leandroparedes0721@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_recorder">Grabadora de Audio</string>
    <string name="menu_camera">Camara</string>
    <string name="menu_reproductor">Reproductor</string>



    //Reproductor
    <string name="pelicula">Test video</string>
    <string name="reproducir">Reproducir</string>
    <string name="play">Reanudar</string>
    <string name="pause">Pausar</string>
    <string name="stop">Stop</string>

    //Camara
    <string name="tomar_foto">Tomar Foto</string>
</resources>