<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_recorder">

    <fragment
        android:id="@+id/nav_reproductor"
        android:name="com.paredesleandro.pmultimedia.ui.reproductor.ReproductorFragment"
        android:label="@string/menu_reproductor"
        tools:layout="@layout/fragment_reproductor" />

    <fragment
        android:id="@+id/nav_camara"
        android:name="com.paredesleandro.pmultimedia.ui.camara.CamaraFragment"
        android:label="@string/menu_camera"
        tools:layout="@layout/fragment_camera" />

    <fragment
        android:id="@+id/nav_recorder"
        android:name="com.paredesleandro.pmultimedia.ui.recorder.RecorderFragment"
        android:label="@string/menu_recorder"
        tools:layout="@layout/fragment_recorder" />
</navigation>