<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.reproductor.ReproductorFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/video"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/title">

            <ImageView
                android:id="@+id/status"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_centerHorizontal="true"
                android:layout_marginHorizontal="20dp"
                android:layout_centerVertical="true"
                android:translationZ="5dp"
                android:src="@drawable/play_24"
                android:backgroundTint="@color/white"
                android:contentDescription="@string/play" />

            <VideoView
                android:id="@+id/videoNav"
                android:layout_width="400dp"
                android:layout_height="400dp"

                android:layout_centerHorizontal="true"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp" />

        </RelativeLayout>


        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textStyle="bold|italic"
            android:layout_marginTop="10dp"
            android:text="@string/pelicula" />

        <LinearLayout
            android:id="@+id/stop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/video"
            android:layout_alignEnd="@id/video"
            android:layout_alignRight="@id/video"


            android:layout_marginStart="80dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="5dp"
            android:layout_toEndOf="@id/play"
            android:layout_toRightOf="@id/play"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:contentDescription="@string/stop"
                android:src="@drawable/stop_24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/stop"


                android:textSize="20sp" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/video"
            android:layout_alignStart="@id/video"
            android:layout_alignLeft="@id/video"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">


            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:contentDescription="@string/play"
                android:src="@drawable/play_24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/play"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/pausa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/video"
            android:layout_alignStart="@id/video"
            android:layout_alignLeft="@id/video"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="15dp"
            android:orientation="horizontal"
            android:visibility="invisible">

            <TextView
                android:id="@+id/pausatxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:contentDescription="@string/pause"
                android:src="@drawable/pause_24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/pause"
                android:textSize="20sp" />
        </LinearLayout>


    </RelativeLayout>
</ScrollView>